--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,42 @@
 alabaster==0.7.12
+appdirs==1.4.4
 attrs==21.2.0
 Babel==2.9.1
+bleach==4.1.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
+colorama==0.4.4
+commonmark==0.9.1
 coverage==5.5
 docutils==0.17.1
 idna==3.2
 imagesize==1.2.0
+importlib-metadata==4.8.1
 iniconfig==1.1.1
 Jinja2==3.0.1
+keyring==23.1.0
 MarkupSafe==2.0.1
 packaging==21.0
+pkginfo==1.7.1
 pluggy==1.0.0
 py==1.10.0
--e git+https://github.com/AoWangPhilly/PyDS.git@2ed23c4980e048f9822500f2d0f31b8df9ae1f86#egg=PyDS
+-e git+https://github.com/AoWangPhilly/PyDS.git@3ad51f61670e2e463af3bf27db407bb62ad859b0#egg=PyDS
 Pygments==2.10.0
 pyparsing==2.4.7
 pytest==6.2.5
 pytest-cov==2.12.1
 pytz==2021.1
+readme-renderer==29.0
+recommonmark==0.7.1
 requests==2.26.0
+requests-toolbelt==0.9.1
+rfc3986==1.5.0
+rinoh-typeface-dejavuserif==0.1.3
+rinoh-typeface-texgyrecursor==0.1.1
+rinoh-typeface-texgyreheros==0.1.1
+rinoh-typeface-texgyrepagella==0.1.1
+rinohtype==0.5.3
+six==1.16.0
 snowballstemmer==2.1.0
 Sphinx==4.1.2
 sphinxcontrib-applehelp==1.0.2
@@ -29,4 +46,8 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 toml==0.10.2
+tqdm==4.62.2
+twine==3.4.2
 urllib3==1.26.6
+webencodings==0.5.1
+zipp==3.5.0
